packages/language/src/__tests__/__fixtures__/invalid/multiple-timelines.eligian
// Test fixture: Multiple timeline declarations (T036)
// Should trigger validation error: "Only one timeline declaration is allowed per program"

timeline "first" using video from "video1.mp4" {
  at 0s..5s [
    selectElement("#element")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}

// Duplicate timeline - should be flagged
timeline "second" using audio from "audio1.mp3" {
  at 0s..5s [
    selectElement("#element")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}
